--- a/packages/graphql-language-service/package.json
+++ b/packages/graphql-language-service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-language-service",
-  "version": "3.2.5",
+  "version": "3.1.4",
   "description": "The official, runtime independent Language Service for GraphQL",
   "contributors": [
     "GraphQL Contributors"
@@ -13,8 +13,7 @@
   "license": "MIT",
   "files": [
     "dist",
-    "esm",
-    "src"
+    "esm"
   ],
   "keywords": [
     "graphql",
@@ -28,15 +27,15 @@
     "graphql": "./dist/temp-bin.js"
   },
   "peerDependencies": {
-    "graphql": "^15.5.0 || ^16.0.0"
+    "graphql": ">= v14.5.0 <= 15.5.0"
   },
   "dependencies": {
-    "graphql-language-service-interface": "^2.9.5",
-    "graphql-language-service-parser": "^1.10.3",
-    "graphql-language-service-types": "^1.8.6",
-    "graphql-language-service-utils": "^2.6.3"
+    "graphql-language-service-interface": "^2.8.2",
+    "graphql-language-service-parser": "^1.9.2",
+    "graphql-language-service-types": "^1.8.2",
+    "graphql-language-service-utils": "^2.5.3"
   },
   "devDependencies": {
-    "graphql": "16.0.0-experimental-stream-defer.5"
+    "graphql": "experimental-stream-defer"
   }
 }
